# rust-taglib-picture

./: Cargo.toml  rust-toolchain  rust-toolchain.toml
.devcontainer/: devcontainer.json
src/: error.rs  lib.rs
taglib_picture-sys/: Cargo.toml  build.rs
taglib_picture-sys/src/: lib.rs
taglib_picture-sys/src/c/: lib.cpp  lib.h  tag_c_picture.cpp  tag_c_picture.h  taglib_c_picture.cpp
