[package]
name = "taglib_picture"
version = "0.1.0"
authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
image = "0.23.14"
libc = "0.2.94"
taglib_picture-sys = { path = "./taglib_picture-sys" }
