[package]
name = "taglib_picture-sys"
version = "0.2.1"
authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58.1"
cc = "1.0.67"
pkg-config = "0.3.19"
